--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class="h-screen w-screen flex flex-row">
-		<div class="flex-auto bg-blue-100 text-gray-200" style="background: url(img/blanchard.jpg); background-size: cover;"></div>
+		<div class="flex-auto bg-blue-100 text-gray-200" style="background: url(img/blanchard.jpg) center center; background-size: cover;"></div>
 		<div class="flex-auto bg-gray-300 flex flex-col justify-center items-center">
 			<div class="mb-16 text-center">
 				<div class="font-light text-3xl">
