More styling improvements?

--- a/public/checkout.html
+++ b/public/checkout.html
@@ -10,10 +10,10 @@
 	<div class="h-screen w-screen flex flex-col">
 
 		<!-- Header Bar -->
-		<div class="flex-shrink bg-blue-800 flex content-between items-center p-2 shadow-md" style="z-index: 1;">
+		<div class="flex-shrink bg-blue-500 flex content-between items-center p-2 shadow-md" style="z-index: 1;">
 
 			<!-- Library Name -->
-			<div class="flex-auto text-gray-200 m-2">
+			<div class="flex-auto text-gray-100 m-2">
 				<div class="font-thin text-2xl">
 					Buswell Library
 				</div>
@@ -32,21 +32,21 @@
 				</div>
 
 				<!-- State Pills -->
-				<div class="flex items-center rounded-full bg-blue-400 m-2 py-1 pl-3 pr-1 text-gray-200">
+				<div class="flex items-center rounded-full border-2 border-blue-300 m-2 py-1 pl-3 pr-1 text-gray-300">
 					<div class="font-extrabold text-xs uppercase">Loans</div>
-					<div class="rounded-full w-8 h-8 bg-blue-300 flex justify-center items-center text-gray-200 ml-2">
+					<div class="rounded-full w-8 h-8 bg-blue-300 flex justify-center items-center text-gray-100 ml-2">
 						56
 					</div>
 				</div>				
-				<div class="flex items-center rounded-full bg-blue-400 m-2 py-1 pl-3 pr-1 text-gray-200">
+				<div class="flex items-center rounded-full border-2 border-blue-300 m-2 py-1 pl-3 pr-1 text-gray-300">
 					<div class="font-extrabold text-xs uppercase">Requests</div>
-					<div class="rounded-full w-8 h-8 bg-blue-300 flex justify-center items-center text-gray-200 ml-2">
+					<div class="rounded-full w-8 h-8 bg-blue-300 flex justify-center items-center text-gray-100 ml-2">
 						2
 					</div>
 				</div>				
-				<div class="flex items-center rounded-full bg-blue-400 m-2 py-1 pl-3 pr-1 text-gray-200">
+				<div class="flex items-center rounded-full border-2 border-blue-300 m-2 py-1 pl-3 pr-1 text-gray-300">
 					<div class="font-extrabold text-xs uppercase">Fines & Fees</div>
-					<div class="rounded-full w-8 h-8 bg-blue-300 flex justify-center items-center text-gray-200 ml-2">
+					<div class="rounded-full w-8 h-8 bg-blue-300 flex justify-center items-center text-gray-100 ml-2">
 						$12
 					</div>
 				</div>
