Changed font weight

--- a/public/checkout.html
+++ b/public/checkout.html
@@ -14,7 +14,7 @@
 
 			<!-- Library Name -->
 			<div class="flex-auto text-gray-100 m-2">
-				<div class="font-thin text-2xl">
+				<div class="font-light text-2xl">
 					Buswell Library
 				</div>
 				<div class="font-extrabold text-sm uppercase">
